rns-lang/tests/snapshots/err-parser-class_directive-header-name-integer_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public 42
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: expected class name
   ╭─[ test_data/integration/err/parser/class_directive/header/name/integer_as_class_name.ja:1:15 ]
   │
 1 │ .class public 42
   │               ─┬  
   │                ╰── found '42' instead
   │ 
   │ Note: Integer literals cannot be used as class names. Every class must have a valid identifier as its name.
───╯
